css: fix dumb alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -1336,7 +1336,8 @@ div#banner {
   }
   .template-page-about #content {
     position: relative;
-    top: 60px;
+    top: 0;
+    margin-top: 60px;
   }
 }
 #content {
